vpc/vpc.tf
# Internet VPC
resource "aws_vpc" "test" {
    cidr_block = "10.0.0.0/16"
    instance_tenancy = "default"
    enable_dns_support = "true"
    enable_dns_hostnames = "true"
    enable_classiclink = "false"
    tags {
        Name = "test"
    }
}

# Subnets
resource "aws_subnet" "test-public-1" {
    vpc_id = "${aws_vpc.test.id}"
    cidr_block = "10.0.1.0/24"
    map_public_ip_on_launch = "false"
    availability_zone = "ap-southeast-1a"

    tags {
        Name = "test-public-1"
    }
}
resource "aws_subnet" "test-public-2" {
    vpc_id = "${aws_vpc.test.id}"
    cidr_block = "10.0.2.0/24"
    map_public_ip_on_launch = "true"
    availability_zone = "ap-southeast-1b"

    tags {
        Name = "test-public-2"
    }
}
resource "aws_subnet" "test-private-1" {
    vpc_id = "${aws_vpc.test.id}"
    cidr_block = "10.0.4.0/24"
    map_public_ip_on_launch = "false"
    availability_zone = "ap-southeast-1a"

    tags {
        Name = "test-private-1"
    }
}
resource "aws_subnet" "test-private-2" {
    vpc_id = "${aws_vpc.test.id}"
    cidr_block = "10.0.5.0/24"
    map_public_ip_on_launch = "false"
    availability_zone = "ap-southeast-1b"

    tags {
        Name = "test-private-2"
    }
}

# Internet GW
resource "aws_internet_gateway" "test-gw" {
    vpc_id = "${aws_vpc.test.id}"

    tags {
        Name = "test"
    }
}

# route tables
resource "aws_route_table" "test-public" {
    vpc_id = "${aws_vpc.test.id}"
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = "${aws_internet_gateway.test-gw.id}"
    }

    tags {
        Name = "test-public-1"
    }
}

# route associations public
resource "aws_route_table_association" "test-public-1-a" {
    subnet_id = "${aws_subnet.test-public-1.id}"
    route_table_id = "${aws_route_table.test-public.id}"
}
resource "aws_route_table_association" "test-public-2-a" {
    subnet_id = "${aws_subnet.test-public-2.id}"
    route_table_id = "${aws_route_table.test-public.id}"
}
